# AIL-baseline

./: .gitignore  README.md  experiment_report.md  requirements.txt  run_gpu.ps1  setup.cfg  setup_data.py  train_local.py
src/ail_detector/: __init__.py  backbones.py  coreset.py  feature_extractor.py  metrics.py  model.py  py.typed  utils.py  visualization.py
src/ail_detector/datasets/: __init__.py  mvtec.py
src/patchcore/: sampler.py  utils.py
src/patchcore/datasets/: mvtec.py
