[metadata]
name = ail_detector
version = 1.1.0
description = Patch-based anomaly detection with adaptive coreset and softmax scoring
author = AIL Team
license = Apache-2.0

[options]
packages = find:
package_dir = = src
install_requires =
    faiss-cpu
    matplotlib>=3.5.0
    pillow>=9.0.0
    timm>=0.9.0
    scikit-image>=0.19.0
    scikit-learn>=1.1.0
    scipy>=1.8.0
    tqdm>=4.62.3
    torch
    torchvision

[options.packages.find]
where = src

[flake8]
max-line-length = 100
extend-ignore = E203, I201, I100
